[package]
name = "lib-service-jwt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Lightweight JWT-based authentication logic with support for access and refresh tokens."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/lib-service-jwt"
keywords = ["auth", "jwt", "access-token", "refresh-token", "authentication"]
readme = "README.md"
categories = ["authentication", "web-programming"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
