[package]
name = "lib-service-jwt"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Lightweight JWT-based authentication logic with support for access and refresh tokens."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/lib-service-jwt"
keywords = ["auth", "jwt", "access-token", "refresh-token", "authentication"]
readme = "README.md"
categories = ["authentication", "web-programming"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"

[dev-dependencies]
