[package]
name = "lib_service_jwt"
version = "0.1.3"
edition = "2021"
authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
description = "Scalable JWT Management with Rust."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/lib_service_jwt"
keywords = ["auth", "jwt", "access-token", "refresh-token", "authentication"]
readme = "README.md"
documentation = "https://docs.rs/lib_service_jwt"
categories = ["authentication", "web-programming"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
thiserror = "2.0.12"
